kubernetes/platform/democratic-csi-iscsi/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: democratic-csi-iscsi
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
