kubernetes/platform/democratic-csi-iscsi/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi-iscsi-controller
  namespace: democratic-csi-iscsi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller-manager
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: democratic-csi-iscsi-node
  namespace: democratic-csi-iscsi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: node
  egress:
    - toEntities:
        - cluster
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 10.0.3.3/32
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
            - port: "3260"
              protocol: TCP
